--- a/estilo.css
+++ b/estilo.css
@@ -1,130 +1,152 @@
-
-
-
 /* layout*/
-html,body, .capa{
-    height: 100%;
+html,
+body,
+.capa {
+  height: 100%;
 }
-body{
-    
-    background: url('/imagens/capa.png'),
-                url('/imagens/ruido.png'),
-                linear-gradient(50deg,#ff4169,#7c26f8);
-   background-attachment: fixed;
-  font-family: Helvetica,Arial, sans-serif;
+body {
+  background: url("/imagens/capa.png"), url("/imagens/ruido.png"),
+    linear-gradient(50deg, #ff4169, #7c26f8);
+  background-attachment: fixed;
+  font-family: Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
-
 
 /*barra navegacao*/
-.img-logo{ height: 40px;
-           width: 132px;
-           display: block;
-           background: url('imagens/spotify.svg') no-repeat;
-           
-           background-size: contain;
-           color: transparent;
+.img-logo {
+  height: 40px;
+  width: 132px;
+  display: block;
+  background: url("imagens/spotify.svg") no-repeat;
 
+  background-size: contain;
+  color: transparent;
 }
 
 nav.navbar-transparente {
-    padding: 15px 0px;
-    background: rgba(0, 0, 0, 0.6);
-    border: none;
+  padding: 15px 0px;
+  background: rgba(0, 0, 0, 0.6);
+  border: none;
 }
-.navbar-brand{
-    padding: 0px;
-    padding: 5px 6px;
+.navbar-brand {
+  padding: 0px;
+  padding: 5px 6px;
 }
-.divisor{
-    width: 1px;
-    height: 16px;
-    background: white;
-    margin: 16px 10px;
+.divisor {
+  width: 1px;
+  height: 16px;
+  background: white;
+  margin: 16px 10px;
 }
- .navbar-inverse .navbar-nav>li>a {
-    color: white;
-    
- }
- .navbar-inverse .navbar-nav>li>a:hover{
-    
-    color: #9bf0e1;
- }
+.navbar-inverse .navbar-nav > li > a,
+footer .nav a {
+  color: white;
+}
+.navbar-inverse .navbar-nav > li > a:hover,
+footer .nav a:hover {
+  color: #9bf0e1;
+  background: none;
+}
 
- /*imagem de capa*/
- .capa{
-     
-     display: table;
-     width: 100%;
- }
- .texto-capa{
-     text-align: center;
-     color: white;
-     display: table-cell;
-     vertical-align: middle;
-
- }
+/*imagem de capa*/
+.capa {
+  display: table;
+  width: 100%;
+}
+.texto-capa {
+  text-align: center;
+  color: white;
+  display: table-cell;
+  vertical-align: middle;
+}
 /*botoes*/
-.btn-custom{
-    color: white;
-    border-radius: 500px;
-    padding:10px 35px;
-    margin: 0px 15px;
-    text-transform: uppercase;
-    transition: background 0.4s, color 0.4s;
+.btn-custom {
+  color: white;
+  border-radius: 500px;
+  padding: 10px 35px;
+  margin: 0px 15px;
+  text-transform: uppercase;
+  transition: background 0.4s, color 0.4s;
 }
-.btn-roxo{
-    background: #7c25f8;
-
+.btn-roxo {
+  background: #7c25f8;
 }
-.btn-roxo:hover{
-    background-color: #6207e3;
-    color: white;
-
+.btn-roxo:hover {
+  background-color: #6207e3;
+  color: white;
 }
 
-
-.btn-branco{
-    border: 2px solid white;
-
+.btn-branco {
+  border: 2px solid white;
 }
-.btn-branco:hover{
-    background-color: white;
-    color: black;
-
+.btn-branco:hover {
+  background-color: white;
+  color: black;
 }
 /*serevico*/
-#servicos{
-    background: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
+#servicos {
+  background: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.albuns{
-    padding: 10px 0px;
+#recursos p {
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
+.albuns {
+  padding: 10px 0px;
+}
+/*footer*/
+
+.rodape {
+  padding: 50px 0px 20px 0px;
+  position: relative;
+  width: 100%;
+  background: black;
+  display: block;
+}
+
+.redesocial {
+  float: right;
+}
 /*tipografia*/
 
-h1
-{
-    font-size: 100px;
-    font-weight: 900;
-    letter-spacing: 0.05em;
-    margin-bottom: 50px;
+h1 {
+  font-size: 100px;
+  font-weight: 900;
+  letter-spacing: 0.05em;
+  margin-bottom: 50px;
 }
-h2{
-    font-size: 50px;
-    font-weight: 700;
-    letter-spacing: 0.04em;
-    
+h2 {
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: 0.04em;
 }
-h3{
-    font-size: 35px;
-    font-weight: 700px;
-    letter-spacing: 0.04em;
-    
+h3 {
+  font-size: 35px;
+  font-weight: 700px;
+  letter-spacing: 0.04em;
 }
 
-#servicos h2, #servicos h3{
-    color: #7c25f8;
+#rodape h4 {
+  color: #919496;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+#servicos h2,
+#servicos h3 {
+  color: #7c25f8;
+}
+
+#recursos h2,
+#recursos h3 {
+  color: #9bf0e1;
+}
+
+.rotacao {
+  transform: rotate(30deg);
+  padding-left: 80px;
 }
